--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "electron": "^37.2.0",
     "electron-builder": "^26.0.12",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "ws": "^8.18.3"
   }
 }
